--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -11,10 +11,7 @@
 .footer__wrapper {
   display: flex;
   justify-content: space-between;
-
-  @media (max-width: $tablet-width-only) {
-    flex-wrap: wrap;
-  }
+  flex-wrap: wrap;
 
   @media (max-width: $mobile-width-only) {
     display: block;
@@ -23,7 +20,7 @@
 
 .footer__links {
   padding-right: 80px;
-  width: max-content;
+  width: min-content;
 
   @media (max-width: $tablet-width-only) {
     padding-right: 0;
