--- a/source/sass/blocks/links.scss
+++ b/source/sass/blocks/links.scss
@@ -5,6 +5,7 @@
   @media (max-width: $tablet-width-only) {
     flex-grow: 1;
     flex-direction: row;
+    column-gap: 15px;
     align-items: center;
     justify-content: space-between;
   }
