--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -16,6 +16,7 @@
   bottom: 0;
   left: 25%;
   text-transform: uppercase;
+  width: max-content;
 
   @media (max-width: ($tablet-width-only + 896px)) {
     position: relative;
